--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
                 <!-- Card 1 -->
                 <div class="bg-white rounded-lg shadow hover:shadow-xl transition-shadow duration-200 overflow-hidden"
                     data-anime="fade-in">
-                    <img src="/assets/images/products/burner.jpg" loading="lazy" alt="Burner" class="w-full h-56 object-contain">
+                    <img src="/assets/images/products/burner.jpg" loading="lazy" alt="Burner"
+                        class="w-full h-56 object-contain">
                     <div class="p-4 bg-slate-200">
                         <h4 class="text-lg font-semibold text-gray-800 pb-2 text-center">Gas Welding Torch</h4>
                         <div class="flex items-center justify-center bg-green-600 py-2 rounded-full cursor-pointer">
@@ -362,7 +363,8 @@
                 <!-- Card 4 -->
                 <div class="bg-white rounded-lg shadow hover:shadow-xl transition-shadow duration-200 overflow-hidden"
                     data-anime="fade-in">
-                    <img src="/assets/images/products/fire-suit.jpg" loading="lazy" alt="Fire Suit" class="w-full h-56 object-contain">
+                    <img src="/assets/images/products/fire-suit.jpg" loading="lazy" alt="Fire Suit"
+                        class="w-full h-56 object-contain">
                     <div class="p-4 bg-slate-200">
                         <h4 class="text-lg font-semibold text-gray-800 pb-2 text-center">Fire Resistant Suit</h4>
                         <div class="flex items-center justify-center bg-green-600 py-2 rounded-full cursor-pointer">
@@ -397,7 +399,8 @@
                 <!-- Card 8 -->
                 <div class="bg-white rounded-lg shadow hover:shadow-xl transition-shadow duration-200 overflow-hidden"
                     data-anime="fade-in">
-                    <img src="/assets/images/products/gloves.png" loading="lazy" alt="Gloves" class="w-full h-56 object-contain">
+                    <img src="/assets/images/products/gloves.png" loading="lazy" alt="Gloves"
+                        class="w-full h-56 object-contain">
                     <div class="p-4 bg-slate-200">
                         <h4 class="text-lg font-semibold text-gray-800 pb-2 text-center">Safety Gloves</h4>
                         <div class="flex items-center justify-center bg-green-600 py-2 rounded-full cursor-pointer">
@@ -408,7 +411,8 @@
                 <!-- Card 9 -->
                 <div class="bg-white rounded-lg shadow hover:shadow-xl transition-shadow duration-200 overflow-hidden"
                     data-anime="fade-in">
-                    <img src="/assets/images/products/welding.jpg" loading="lazy" alt="Gloves" class="w-full h-56 object-contain">
+                    <img src="/assets/images/products/welding.jpg" loading="lazy" alt="Gloves"
+                        class="w-full h-56 object-contain">
                     <div class="p-4 bg-slate-200">
                         <h4 class="text-lg font-semibold text-gray-800 pb-2 text-center">Portable Welder Machine</h4>
                         <div class="flex items-center justify-center bg-green-600 py-2 rounded-full cursor-pointer">
@@ -419,7 +423,8 @@
                 <!-- Card  -->
                 <div class="bg-white rounded-lg shadow hover:shadow-xl transition-shadow duration-200 overflow-hidden"
                     data-anime="fade-in">
-                    <img src="/assets/images/products/toolkit.jpg" loading="lazy" alt="Gloves" class="w-full h-56 object-contain">
+                    <img src="/assets/images/products/toolkit.jpg" loading="lazy" alt="Gloves"
+                        class="w-full h-56 object-contain">
                     <div class="p-4 bg-slate-200">
                         <h4 class="text-lg font-semibold text-gray-800 pb-2 text-center">General Hardware toolkit</h4>
                         <div class="flex items-center justify-center bg-green-600 py-2 rounded-full cursor-pointer">
@@ -468,8 +473,8 @@
                                     class="h-24 md:h-32 w-auto object-contain max-w-full">
                             </div>
                             <div class="swiper-slide flex justify-center">
-                                <img src="/assets/images/partners/kenwood-logoresized.png" loading="lazy" alt="Partner 2"
-                                    class="h-24 md:h-32 w-auto object-contain max-w-full">
+                                <img src="/assets/images/partners/kenwood-logoresized.png" loading="lazy"
+                                    alt="Partner 2" class="h-24 md:h-32 w-auto object-contain max-w-full">
                             </div>
                             <!-- Partner 3 -->
                             <div class="swiper-slide flex justify-center">
@@ -488,8 +493,8 @@
                             </div>
                             <!-- Partner 6 -->
                             <div class="swiper-slide flex justify-center">
-                                <img src="/assets/images/partners/pakistan-oxygenresized.jpg" loading="lazy" alt="Partner 8"
-                                    class="h-24 md:h-32 w-auto object-contain max-w-full">
+                                <img src="/assets/images/partners/pakistan-oxygenresized.jpg" loading="lazy"
+                                    alt="Partner 8" class="h-24 md:h-32 w-auto object-contain max-w-full">
                             </div>
                             <!-- Partner 7 -->
                             <div class="swiper-slide flex justify-center">
@@ -558,8 +563,8 @@
                             </div>
                             <!-- Partner 8 -->
                             <div class="swiper-slide flex justify-center">
-                                <img src="/assets/images/partners/unique_enterprises_oil__gas__logo.jpg" loading="lazy" alt="Partner 8"
-                                    class="h-24 md:h-32 w-auto object-contain max-w-full">
+                                <img src="/assets/images/partners/unique_enterprises_oil__gas__logo.jpg" loading="lazy"
+                                    alt="Partner 8" class="h-24 md:h-32 w-auto object-contain max-w-full">
                             </div>
                         </div>
                     </div>
