optimized the images

--- a/certifications.html
+++ b/certifications.html
@@ -13,7 +13,7 @@
     <header class="relative w-full">
         <figure class="relative w-full h-96">
             <!-- Hero Image -->
-            <img class="w-full h-full object-cover" src="/assets/images/hero1.jpg" alt="Hero Image" loading="lazy">
+            <img class="w-full h-full object-cover" src="/assets/images/hero7.webp" alt="Hero Image" loading="lazy">
 
             <!-- Overlay for darker background -->
             <div class="absolute inset-0 bg-black bg-opacity-60"></div>
@@ -40,11 +40,11 @@
 
                         <!-- Navigation Links (Desktop) -->
                         <ul class="hidden md:flex gap-8 text-white font-medium">
-                            <li><a href="#home" class="hover:text-green-600">Home</a></li>
-                            <li><a href="#services" class="hover:text-green-600">Services</a></li>
-                            <li><a href="#about" class="hover:text-green-600">About Us</a></li>
-                            <li><a href="#contact" class="hover:text-green-600">Contact</a></li>
-                            <li><a href="#certifications" class="hover:text-green-600">Certifications</a></li>
+                            <li><a href="index.html/#hero" class="hover:text-green-600">Home</a></li>
+                            <li><a href="index.html/#our-services" class="hover:text-green-600">Services</a></li>
+                            <li><a href="index.html/#about-us" class="hover:text-green-600">About Us</a></li>
+                            <li><a href="index.html/#contact-us" class="hover:text-green-600">Contact</a></li>
+                            <li><a href="certifications.html" class="text-green-600">Certifications</a></li>
                         </ul>
 
                         <!-- Sliding Menu -->
@@ -89,7 +89,8 @@
         <a href="https://wa.me/923003114701"
             class="fixed bottom-5 right-5 bg-green-500 text-white text-lg font-bold px-5 py-3 rounded-full shadow-lg hover:bg-green-600 transition duration-300 z-50 hidden"
             id="whatsapp-button">
-            <img src="assets/images/icons/whatsapp.svg" class="w-6 h-6 inline-block mr-2" loading="lazy" alt="WhatsApp" />
+            <img src="assets/images/icons/whatsapp.svg" class="w-6 h-6 inline-block mr-2" loading="lazy"
+                alt="WhatsApp" />
             Talk to Us
         </a>
     </header>
@@ -157,8 +158,8 @@
                                     onclick="my_modal_1.showModal()">View</button>
                                 <dialog id="my_modal_1" class="modal modal-bottom sm:modal-middle">
                                     <div class="modal-box">
-                                        <img src="/assets/images/certificates/fbr-slip.jpg" class="z-50"
-                                            loading="lazy" alt="Certificate Image">
+                                        <img src="/assets/images/certificates/fbr-slip.jpg" class="z-50" loading="lazy"
+                                            alt="Certificate Image">
                                     </div>
                                     <form method="dialog" class="modal-backdrop">
                                         <button>Close</button>
@@ -176,7 +177,8 @@
                                     onclick="my_modal_2.showModal()">View</button>
                                 <dialog id="my_modal_2" class="modal modal-bottom sm:modal-middle">
                                     <div class="modal-box">
-                                        <img src="/assets/images/certificates/fbr-taxpayer.jpg" loading="lazy" alt="Certificate Image">
+                                        <img src="/assets/images/certificates/fbr-taxpayer.jpg" loading="lazy"
+                                            alt="Certificate Image">
                                     </div>
                                     <form method="dialog" class="modal-backdrop">
                                         <button>Close</button>
@@ -194,8 +196,8 @@
                                     onclick="my_modal_3.showModal()">View</button>
                                 <dialog id="my_modal_3" class="modal modal-bottom sm:modal-middle">
                                     <div class="modal-box">
-                                        <img src="/assets/images/certificates/pr-tax-certificate.jpg"
-                                            loading="lazy" alt="Certificate Image">
+                                        <img src="/assets/images/certificates/pr-tax-certificate.jpg" loading="lazy"
+                                            alt="Certificate Image">
                                     </div>
                                     <form method="dialog" class="modal-backdrop">
                                         <button>Close</button>
@@ -251,7 +253,8 @@
                                     onclick="my_modal_6.showModal()">View</button>
                                 <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
                                     <div class="modal-box">
-                                        <img src="/assets/images/certificates/siehs order.jpg" loading="lazy" alt="Receipt Image ">
+                                        <img src="/assets/images/certificates/siehs order.jpg" loading="lazy"
+                                            alt="Receipt Image ">
                                     </div>
                                     <form method="dialog" class="modal-backdrop">
                                         <button>Close</button>
@@ -269,7 +272,8 @@
                                     onclick="my_modal_7.showModal()">View</button>
                                 <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
                                     <div class="modal-box">
-                                        <img src="/assets/images/certificates/sukkur-baverage-order.jpg" loading="lazy" alt="Receipt Image ">
+                                        <img src="/assets/images/certificates/sukkur-baverage-order.jpg" loading="lazy"
+                                            alt="Receipt Image ">
                                     </div>
                                     <form method="dialog" class="modal-backdrop">
                                         <button>Close</button>
@@ -287,7 +291,8 @@
                                     onclick="my_modal_8.showModal()">View</button>
                                 <dialog id="my_modal_8" class="modal modal-bottom sm:modal-middle">
                                     <div class="modal-box">
-                                        <img src="/assets/images/certificates/pphi-order.jpg" loading="lazy" alt="Receipt Image ">
+                                        <img src="/assets/images/certificates/pphi-order.jpg" loading="lazy"
+                                            alt="Receipt Image ">
                                     </div>
                                     <form method="dialog" class="modal-backdrop">
                                         <button>Close</button>
@@ -317,6 +322,7 @@
         </div>
     </section>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
