fixed paths for production

--- a/index.html
+++ b/index.html
@@ -752,8 +752,8 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
-    <script src="assets/js/addSvgIcons.js"></script>
+    <script src="/script.js"></script>
+    <script src="/assets/js/addSvgIcons.js"></script>
     <script type="module" src="assets/js/swiper.js"></script>
 </body>
 
