--- a/index.html
+++ b/index.html
@@ -752,9 +752,9 @@
         </div>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="/assets/js/script.js"></script>
     <script src="/assets/js/addSvgIcons.js"></script>
-    <script type="module" src="assets/js/swiper.js"></script>
+    <script type="module" src="/assets/js/swiper.js"></script>
 </body>
 
 </html>
