--- a/certifications.html
+++ b/certifications.html
@@ -322,7 +322,7 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
